# happeningnu

./: .gitignore  Cargo.toml  README.md
assets/: index.html
assets/css/: app.css
assets/js/: app.js
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: handler.rs  helper.rs  main.rs  router.rs
src/entities/: events.rs  mod.rs  prelude.rs  user_events.rs  users.rs
src/handler/: event_handler.rs  models.rs  user_handler.rs
templates/layouts/: base.html
templates/partials/: flash.html  footer.html  home.html  login.html  navbar.html  new_event.html  signup.html  user_events.html
