[package]
name = "happeningnu"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = "0.8.8"
axum-messages = "0.8.0"
chrono = "0.4.43"
dotenvy = "0.15.7"
hyper = "1.8.1"
sea-orm = { version = "1.1.19", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "with-chrono", "with-uuid"] }
sea-orm-migration = { version = "1.1.19", features = ["sqlx-sqlite"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tera = "1.20.1"
time = "0.3.47"
tokio = { version = "1.49.0", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
tower-sessions = "0.15.0"
tower-sessions-sqlx-store = { version = "0.15.0", features = ["sqlite"] }
validator = { version = "0.20.0", features = ["derive"] }
